--- a/po/eo.po
+++ b/po/eo.po
@@ -1,7 +1,7 @@
 # *************************************************************************
 # *                                                                       *
 # *                Esperanto Translations for Star Traders                *
-# *                   Copyright (C) 2013, John Zaitseff                   *
+# *                 Copyright (C) 2013-14, John Zaitseff                  *
 # *          Copyright (C) 2013, Free Software Foundation, Inc.           *
 # *                                                                       *
 # *************************************************************************
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: trader 7.5\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-05-09 13:57+1000\n"
-"PO-Revision-Date: 2013-02-22 06:38+1100\n"
+"PO-Revision-Date: 2014-05-22 10:59+1000\n"
 "Last-Translator: Felipe Castro <fefcas@gmail.com>\n"
 "Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
 "Language: eo\n"
