--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.6 (not yet released)
+------------------------------
+
+(Nothing yet...)
+
+
 Version 7.5 (24th May, 2014)
 ----------------------------
 
