Start preparing for the next version of Star Traders (version 7.7)

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.7 (not yet released)
+------------------------------
+
+No changes yet...
+
+
 Version 7.6 (13th August, 2014)
 -------------------------------
 
