--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ at http://www.zap.org.au/services/svn/.
 Version 7.7 (not yet released)
 ------------------------------
 
-No changes yet...
+Added the Hungarian translation, with thanks to Balázs Úr.
 
 
 Version 7.6 (13th August, 2014)
