--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,8 @@ at http://www.zap.org.au/services/svn/.
 Version 7.7 (not yet released)
 ------------------------------
 
-Added the Hungarian translation, with thanks to Balázs Úr.
+Added the  Hungarian translation, with  thanks to  Balázs Úr.   Minor code
+changes were made to accommodate this language.
 
 
 Version 7.6 (13th August, 2014)
